// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyBagPage component with false should renders correctly for SFL 1`] = `
<div
  className=""
>
  <div
    className="empty-sfl-msg"
  >
    <Styled(BodyCopy)
      className={null}
      color="gray.900"
      component="p"
      dataLocator="cartEmptySFLMessage_1"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="center"
    >
      Not ready to buy anything yet?
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className={null}
      color="gray.900"
      component="p"
      dataLocator="cartEmptySFLMessage_2"
      fontFamily="secondary"
      fontSize="fs14"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="center"
    >
      You can save it for later and it will appear in this area.
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`EmptyBagPage component with false should renders correctly with false 1`] = `
<div
  className=""
>
  <Styled(BodyCopy)
    className="large-size-message"
    color="gray.900"
    component="p"
    dataLocator="cartEmptyBagMessage"
    fontFamily="secondary"
    fontSize={12}
    fontWeight="extrabold"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  />
  <Connect(ApplyNowModalWrapper) />
  <div
    className="element-spacing"
  >
    <Styled(Button)
      className="CTA-button"
      data-locator="cartGuestLoginCta"
      onClick={[Function]}
    >
      <Styled(BodyCopy)
        className={null}
        color="white"
        component="span"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      />
    </Styled(Button)>
  </div>
  <Styled(BodyCopy)
    className="large-size-message"
    color="gray.900"
    component="p"
    dataLocator="cartRecommendationMessage"
    fontFamily="secondary"
    fontSize={12}
    fontWeight="extrabold"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  />
  <Styled(BodyCopy)
    className="small-spacing"
    color="text.primary"
    component="p"
    dataLocator="cartRecommendationMessage"
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  />
</div>
`;

exports[`EmptyBagPage component with true should renders correctly with true 1`] = `
<div
  className=""
>
  <Styled(BodyCopy)
    className="large-size-message"
    color="gray.900"
    component="p"
    dataLocator="cartEmptyBagMessage"
    fontFamily="secondary"
    fontSize={12}
    fontWeight="extrabold"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  />
  <Connect(ApplyNowModalWrapper) />
  <div
    className="element-spacing"
  >
    <Styled(Button)
      className="CTA-button"
      data-locator="cartRegisteredShopNowButton"
      onClick={[Function]}
    >
      <Styled(BodyCopy)
        className={null}
        color="white"
        component="span"
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        link={null}
        textAlign="left"
      />
    </Styled(Button)>
  </div>
  <Styled(BodyCopy)
    className="large-size-message"
    color="gray.900"
    component="p"
    dataLocator="cartRecommendationMessage"
    fontFamily="secondary"
    fontSize={12}
    fontWeight="extrabold"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  />
  <Styled(BodyCopy)
    className="small-spacing"
    color="text.primary"
    component="p"
    dataLocator="cartRecommendationMessage"
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  />
</div>
`;
